--- a/01_PyTorch/Pytorch.ipynb
+++ b/01_PyTorch/Pytorch.ipynb
@@ -136,147 +136,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "7c4236a9",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'grad' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m y = \u001b[43mgrad\u001b[49m.fn\n\u001b[32m      2\u001b[39m y.backward()\n",
-      "\u001b[31mNameError\u001b[39m: name 'grad' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "y = grad.fn\n",
-    "y.backward()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "8f39608e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "int64\n",
-      "torch.LongTensor\n",
-      "[[ 0  1  2]\n",
-      " [ 3  4  5]\n",
-      " [ 6  7  8]\n",
-      " [ 9 10 11]]\n",
-      "torch.LongTensor\n"
-     ]
-    }
-   ],
-   "source": [
-    "import torch\n",
-    "torch.__version__\n",
-    "\n",
-    "#chuyển đổi mảng numpy sang tensor pytorch\n",
-    "\n",
-    "arr = np.array([1, 2, 3,4,5])\n",
-    "print(arr.dtype)\n",
-    "tensor = torch.from_numpy(arr)\n",
-    "print(tensor.type())\n",
-    "arr2 = np.arange(0,12).reshape(4,3)\n",
-    "print(arr2)\n",
-    "tensor2 = torch.from_numpy(arr2)\n",
-    "print(tensor2.type())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "47850c43",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([1, 2, 3, 4, 5])\n",
-      "[99  2  3  4  5]\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = torch.from_numpy(arr)\n",
-    "print(x)\n",
-    "\n",
-    "arr[0] = 99\n",
-    "print(arr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "1b203404",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([0, 1, 2, 3, 4])\n"
-     ]
-    }
-   ],
-   "source": [
-    "arr3 = np.arange(0,5)\n",
-    "tensor = torch.tensor(arr3)\n",
-    "print(tensor)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "a43925ff",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[99  1  2  3  4]\n"
-     ]
-    }
-   ],
-   "source": [
-    "arr3[0] = 99\n",
-    "print(arr3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0c1c32db",
-   "metadata": {},
-   "source": [
-    "# BTVN\n",
-    "# giai thich tai sao ko thay duoc 99 vao (lmao)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4ddd363e",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "4a87116e",
    "metadata": {},
    "source": [
-    "# BTWN 01\n",
+    "# BTVN 01\n",
     "\n",
     "Cho y = 5x^5 + 6x^4 - 3x + 1\n",
     "\n",
@@ -515,6 +379,42 @@
     "print(\"-\" * 50)\n",
     "print(\"KẾT QUẢ CUỐI CÙNG:\")\n",
     "print(f\"Mô hình học được:     w = {w.item():.4f}, b = {b.item():.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40c85200",
+   "metadata": {},
+   "source": [
+    "## BTVN 04\n",
+    "### Giải thích tại sao không thay 99 vào tensor được"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "258e027b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[99  1  2  3  4]\n",
+      "tensor([0, 1, 2, 3, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "\n",
+    "arr3 = np.arange(0, 5)\n",
+    "tensor = torch.tensor(arr3) \n",
+    "\n",
+    "arr3[0] = 99\n",
+    "print(arr3) # thay đổi mảng gốc\n",
+    "print(tensor) #  Tensor KHÔNG thay đổi"
    ]
   },
   {
